--- a/javascript/study/if.html
+++ b/javascript/study/if.html
@@ -50,7 +50,7 @@
               <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
               
               <h3 class="t_tit2">prompt</h3>
-              <p class="desc">prompt()는 숫자로 입려간 데이터를 문자 데이터로 처리하기에 '+'연산자를<br>사용할 경우 더하기 연산이 아닌 연결 연산이 된다.<br>이 문제를 해결하기 위해서는 Number 사용</p>
+              <p class="t_box">prompt()는 숫자로 입려간 데이터를 문자 데이터로 처리하기에 '+'연산자를<br>사용할 경우 더하기 연산이 아닌 연결 연산이 된다.<br>이 문제를 해결하기 위해서는 Number 사용</p>
               <p class="codepen" data-height="500" data-default-tab="js,result" data-slug-hash="QWmMdVw" data-user="kdb6" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
                 <span>See the Pen <a href="https://codepen.io/kdb6/pen/QWmMdVw">
                 if문 2</a> by KDB6 (<a href="https://codepen.io/kdb6">@kdb6</a>)
@@ -59,7 +59,7 @@
               <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
 
               <h3 class="t_tit2">switch</h3>
-              <p class="desc">switch(값)의 값과 case의 값들은 하나씩 비교해 일치하는 case를 실행시켜준다.<br>switch문은 if문과 다르게 특정 조건에 만족 했을 때 블록{}을 스스로 빠져나가지 못한다.<br>이러기에 break명령어를 주어 switch case문의 블록{}을 빠져 나가도록 한다.</p>
+              <p class="t_box">switch(값)의 값과 case의 값들은 하나씩 비교해 일치하는 case를 실행시켜준다.<br>switch문은 if문과 다르게 특정 조건에 만족 했을 때 블록{}을 스스로 빠져나가지 못한다.<br>이러기에 break명령어를 주어 switch case문의 블록{}을 빠져 나가도록 한다.</p>
               <p class="codepen" data-height="500" data-default-tab="js,result" data-slug-hash="gOexgyy" data-user="kdb6" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
                 <span>See the Pen <a href="https://codepen.io/kdb6/pen/gOexgyy">
                 if문 3</a> by KDB6 (<a href="https://codepen.io/kdb6">@kdb6</a>)
