--- a/html/layout04.html
+++ b/html/layout04.html
@@ -52,9 +52,9 @@
                     <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fi0yArofcXtFHtLmBkC0q9d%2F%25EA%25B7%25B8%25EB%25A6%25AC%25EB%2593%259C%3Fnode-id%3D29%253A95" allowfullscreen></iframe>
                 </div>
 
-                <h3 class="t_tit">float을 이용한 레이아웃</h3>
+                <h3 class="t_tit">container을 이용한 레이아웃</h3>
                 <p class="t_desc2">
-                    float 요소를 이용해 세로로만 나열이 아닌 가로로도 배치하여 레이아웃을 구성
+                    container 요소를 이용해 레이아웃을 구성 (반응형 포함)
                 </p>
             <div class="t_code">
 <pre><code class="language-css">    * {
@@ -95,95 +95,6 @@
     }
 </code></pre>
             </div>
-
-            <h3 class="t_tit">flex를 이용한 레이아웃</h3>
-                <p class="t_desc2">
-                    flex 안에 있는 요소들을 선언하여, 유연하게 배치하여 레이아웃 구성
-                </p>
-            <div class="t_code">
-<pre><code class="language-css">    * {
-        margin: 0;
-        padding: 0;
-    }
-    #header {
-        height: 100px;
-        background-color: #e0f2f1;
-    }
-    #nav {
-        height: 300px;
-        background-color: #80cbc4;
-    }
-    #section {
-        height: 580px;
-        background-color: #26a694;
-    }
-    #footer {
-        height: 100px;
-        background-color: #00897b;
-    }
-    .container {
-        width: 1200px;
-        height: inherit;
-        margin: 0 auto;
-        background-color: rgba(0, 0, 0, 0.3);
-    }
-    @media (max-width: 1220px){
-        .container {
-            width: 96%;
-        }
-    }
-    @media (max-width: 768px){
-        .container {
-            width: 100%;
-        }
-    }
-</code></pre>
-            </div>
-
-            <h3 class="t_tit">grid를 이용한 레이아웃</h3>
-                <p class="t_desc2">
-                    grid 시스템을 이용한 레이아웃 구성
-                </p>
-            <div class="t_code">
-<pre><code class="language-css">    * {
-        margin: 0;
-        padding: 0;
-    }
-    #header {
-        height: 100px;
-        background-color: #e0f2f1;
-    }
-    #nav {
-        height: 300px;
-        background-color: #80cbc4;
-    }
-    #section {
-        height: 580px;
-        background-color: #26a694;
-    }
-    #footer {
-        height: 100px;
-        background-color: #00897b;
-    }
-    .container {
-        width: 1200px;
-        height: inherit;
-        margin: 0 auto;
-        background-color: rgba(0, 0, 0, 0.3);
-    }
-    @media (max-width: 1220px){
-        .container {
-            width: 96%;
-        }
-    }
-    @media (max-width: 768px){
-        .container {
-            width: 100%;
-        }
-    }
-</code></pre>
-            </div>
-
             <summary>결과</summary>
             <div class="iframe">
                 <iframe height="600" style="width: 100%;" scrolling="no" title="layout04-float" src="https://codepen.io/kdb6/embed/RwMZmpR?default-tab=result" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
