--- a/javascript/javascript01.html
+++ b/javascript/javascript01.html
@@ -94,7 +94,11 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample01_result"></div>
+                        <div class="sample01_result">
+                            100<br>
+                            200<br>
+                            javascript
+                        </div>
                     </details>
                 </div>
             </div>
@@ -121,7 +125,11 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample02_result"></div>
+                        <div class="sample02_result">
+                            300<br>
+                            400<br>
+                            jquery
+                        </div>
                     </details>
                 </div>
             </div>
@@ -148,7 +156,11 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample03_result"></div>
+                        <div class="sample03_result">
+                            400<br>
+                            -200<br>
+                            javasciprtjquery
+                        </div>
                     </details>
                 </div>
             </div>
@@ -226,7 +238,11 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample05_result"></div>
+                        <div class="sample05_result">
+                            100<br>
+                            200<br>
+                            javascripts
+                        </div>
                     </details>
                 </div>
             </div>
@@ -251,7 +267,11 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample06_result"></div>
+                        <div class="sample06_result">
+                            100<br>
+                            200<br>
+                            javascript
+                        </div>
                     </details>
                 </div>
             </div>
@@ -273,7 +293,11 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample07_result"></div>
+                        <div class="sample07_result">
+                            100<br>
+                            200<br>
+                            javascript
+                        </div>
                     </details>
                 </div>
             </div>
@@ -298,7 +322,11 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample08_result"></div>
+                        <div class="sample08_result">
+                            100<br>
+                            200<br>
+                            javascript
+                        </div>
                     </details>
                 </div>
             </div>
@@ -320,7 +348,11 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample09_result"></div>
+                        <div class="sample09_result">
+                            100<br>
+                            200<br>
+                            javascript
+                        </div>
                     </details>
                 </div>
             </div>
@@ -346,7 +378,11 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample10_result"></div>
+                        <div class="sample10_result">
+                            100<br>
+                            200<br>
+                            javascript
+                        </div>
                     </details>
                 </div>
             </div>
@@ -372,7 +408,11 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample11_result"></div>
+                        <div class="sample11_result">
+                            100<br>
+                            200<br>
+                            javascript
+                        </div>
                     </details>
                 </div>
             </div>
@@ -399,7 +439,11 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample12_result"></div>
+                        <div class="sample12_result">
+                            100<br>
+                            200<br>
+                            javascript
+                        </div>
                     </details>
                 </div>
             </div>
@@ -422,7 +466,11 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample13_result"></div>
+                        <div class="sample13_result">
+                            100<br>
+                            200<br>
+                            javascript
+                        </div>
                     </details>
                 </div>
             </div>
@@ -448,7 +496,11 @@
                 <div class="result">
                     <details>
                         <summary>결과보기</summary>
-                        <div class="sample14_result"></div>
+                        <div class="sample14_result">
+                            100<br>
+                            200<br>
+                            javascript
+                        </div>
                     </details>
                 </div>
             </div>
@@ -514,6 +566,9 @@
                     <details>
                         <summary>결과보기</summary>
                         <div class="sample16_result">
+                            100<br>
+                            200<br>
+                            javascript
                         </div>
                     </details>
                 </div>
@@ -592,15 +647,15 @@
     <script>
         // // 01
         // {
-        //     var x = 100;            //변수 x에 숫자 100을 저장함
-        //     var y = 200;            //변수 y에 숫자 200을 저장함
-        //     var z = "javascript";   //변수 z에 문자열 "javascript"을 저장함
+            // var x = 100;            //변수 x에 숫자 100을 저장함
+            // var y = 200;            //변수 y에 숫자 200을 저장함
+            // var z = "javascript";   //변수 z에 문자열 "javascript"을 저장함
 
-        //     // document.write(x)
-        //     // document.write(y)
-        //     // document.write(z)
+            // document.write(x)
+            // document.write(y)
+            // document.write(z)
 
-        //     document.querySelector(".sample01_result").innerHTML = x + "<br>" + y + "<br>" + z
+            // document.querySelector(".sample01_result").innerHTML = x + "<br>" + y + "<br>" + z
         // }
 
         // //02
