--- a/javascript/effect/quizeffect02.html
+++ b/javascript/effect/quizeffect02.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>퀴즈 이펙트</title>
+    <title>퀴즈 이펙트 02</title>
 
     <link rel="stylesheet" href="../assets/css/quiz.css">
 
@@ -91,7 +91,7 @@
         const answerAsk = "기업의 새로운 이념 구축에 필요한 이미지와 커뮤니케이션 시스템을 의도적, 계획적으로 만들어내는 기업이미지통합 전략은 무엇인가요?";
         let answerResult = "CIP";
 
-        // 문재 출력
+        // 문제 출력
         quizType.textContent = answerType;
         quizNumber.textContent = answerNum + ". ";
         quizAsk.textContent = answerAsk;
