--- a/test.html
+++ b/test.html
@@ -1,42 +1,3 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
-</head>
-<body>
-    <script>
-        const arr = [1, 2, 3, 4, 5, 6, 7, 8, 9]
-
-        for(i=1; i<=9; i++) {
-            document.write(i);
-        }
-
-        document.write("<br>")
-
-        arr.forEach(function(el) {
-            document.write(el);
-        });
-
-        document.write("<br>")
-
-        for(i of arr) {
-            document.write(i);
-        }
-
-        document.write("<br>")
-
-        for(i in arr) {
-            document.write(arr[i]);
-        }
-
-        document.write("<br>")
-
-        num.forEach(function(el) {
-            document.write(el);
-        });
-    </script>
-</body>
-</html>
+quizConfirm.forEach((btn, num) => {
+    btn.addEvent
+})
