--- a/javascript/study/element.html
+++ b/javascript/study/element.html
@@ -69,7 +69,7 @@
                     </tr>
                     <tr>
                         <td class="ce">getElementByName()</td>
-                        <td>document.getElementByName('txt')일 경우 HTML 요소 중 name명이 'tx'인 요소들을 선택합니다.</td>
+                        <td>document.getElementByName('txt')일 경우 HTML 요소 중 name명이 'txt'인 요소들을 선택합니다.</td>
                     </tr>
                     <tr>
                         <td class="ce">querySelector()</td>
@@ -82,7 +82,7 @@
                     </tr>
                     <tr>
                         <td class="ce">querySelectorAll()</td>
-                        <td>querySelector()는 선택된 요소 중 첫 번쨰 요소만 선택하는 반면 querySelectorAll()는 모든 요소를 선택합니다.</td>
+                        <td>querySelector()는 선택된 요소 중 첫 번째 요소만 선택하는 반면 querySelectorAll()는 모든 요소를 선택합니다.</td>
                     </tr>
                 </tbody>
             </table>
