--- a/javascript/effect/quizeffect03.html
+++ b/javascript/effect/quizeffect03.html
@@ -283,7 +283,7 @@
             btn.addEventListener("click", () => {
                 
                 // 사용자 정답
-                const userWord = quizInput[num].value.toLowerCase().trim();   // 소문자 전환과 여백 삭제 toLowerCase, trim
+                const userWord = quizInput[num].value;   // 소문자 전환과 여백 삭제 toLowerCase, trim
                 
                 // console.log(userWord)
                 // console.log(quizInfo[num].answerResult)
