--- a/javascript/effect/quizeffect04.html
+++ b/javascript/effect/quizeffect04.html
@@ -111,7 +111,7 @@
             {
                 answerType : "웹디자인기능사 0000년 01회",
                 answerNum : "1",
-                answerAsk : "먼셀의 표색게에서 색상을 표시하는 기호로 맞는 것은",
+                answerAsk : "먼셀의 표색게에서 색상을 표시하는 기호로 맞는 것은?",
                 answerChoice : ["C/HV", "HC/V", "HV/C", "CV/H"],
                 answerResult : "4",
                 answerEx : "먼셀의 표색계는 색의 3속성에 의한 방법이다. H : Hue 색상, V : Value 명도, C : Chroma 채도"
