--- a/javascript/study/quiz04.html
+++ b/javascript/study/quiz04.html
@@ -17,12 +17,12 @@
                 자바스크립트를 이용해 퀴즈 형태 방식을 코딩
             </p>
 
-            <div class="t_iframe" style="min-height: 900px; padding-top: 0;">
-                <iframe src="https://kdb6.github.io/ck/javascript/effect/quizeffect03.html" frameborder="0"></iframe>
+            <div class="t_iframe" style="min-height: 1000px; padding-top: 0;">
+                <iframe src="https://kdb6.github.io/ck/javascript/effect/quizeffect04.html" frameborder="0"></iframe>
             </div>
 
             <div class="t_link">
-                <a href="https://github.com/KDB6/ck/blob/main/javascript/effect/quizeffect03.html" target="_blank">원본 사이트 보기</a>
+                <a href="https://github.com/KDB6/ck/blob/main/javascript/effect/quizeffect04.html" target="_blank">원본 사이트 보기</a>
             </div>
 
             <h3 class="t_tit2">자바스크립트</h3>
@@ -46,7 +46,7 @@
         {
             answerType : "웹디자인기능사 0000년 01회",
             answerNum : "1",
-            answerAsk : "먼셀의 표색게에서 색상을 표시하는 기호로 맞는 것은",
+            answerAsk : "먼셀의 표색게에서 색상을 표시하는 기호로 맞는 것은?",
             answerChoice : ["C/HV", "HC/V", "HV/C", "CV/H"],
             answerResult : "4",
             answerEx : "먼셀의 표색계는 색의 3속성에 의한 방법이다. H : Hue 색상, V : Value 명도, C : Chroma 채도"
