--- a/site/cardType/cardType01.html
+++ b/site/cardType/cardType01.html
@@ -7,7 +7,7 @@
     <title>카드 유형01</title>
     <style>
         /* fonts */
-        @import url('https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css');
+        @import url('https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css');    /* 폰트 */
 
         .nexon {
             font-family: "NexonLv1Gothic";
