--- a/site/cardType/cardType01.html
+++ b/site/cardType/cardType01.html
@@ -92,7 +92,9 @@
                 </figure>
                 <div class="card__body">
                     <h3 class="tit">포터리</h3>
-                    <p class="desc">포터리는 현대사회에 알맞는 유니폼을 제안하고자 합니다. 과거의 유니폼은 한 집단에 소속된 특징을 보여주는 옷이라면, 현대의 유니폼은 개인의 라이프스타일입니다.</p>
+                    <p class="desc">
+                        포터리는 현대사회에 알맞는 유니폼을 제안하고자 합니다. 과거의 유니폼은 한 집단에 소속된 특징을 보여주는 옷이라면, 현대의 유니폼은 개인의 라이프스타일입니다.
+                    </p>
                     <a class="btn" href="/">더 자세히 보기</a>
                 </div>
             </article>
@@ -102,7 +104,9 @@
                 </figure>
                 <div class="card__body">
                     <h3 class="tit">TPO</h3>
-                    <p class="desc">우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다. 옷이 그 외의 상황입니다.</p>
+                    <p class="desc">
+                        우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다. 옷이 그 외의 상황입니다.
+                    </p>
                     <a class="btn" href="/">더 자세히 보기</a>
                 </div>
             </article>
@@ -112,7 +116,9 @@
                 </figure>
                 <div class="card__body">
                     <h3 class="tit">원단</h3>
-                    <p class="desc">유니폼은 계절감, 내구성, 그리고 각각의 형태의 본질을 담아야 합니다. 유니폼에 맞는 원단이 선택되면 수차례 옷을 만들어냅니다. 일정 기간을 두고 옷을 관찰합니다.</p>
+                    <p class="desc">
+                        유니폼은 계절감, 내구성, 그리고 각각의 형태의 본질을 담아야 합니다. 유니폼에 맞는 원단이 선택되면 수차례 옷을 만들어냅니다. 일정 기간을 두고 옷을 관찰합니다.
+                    </p>
                     <a class="btn" href="/">더 자세히 보기</a>
                 </div>
             </article>
