--- a/javascript/study/cardType01.html
+++ b/javascript/study/cardType01.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>카드 유형 사이트 만들기</title>
+    <title>카드 타입 사이트 만들기</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/dracula.css">
 </head>
 <body>
     <main id="main">
         <div class="document">
-            <h2 class="t_tit">카드 유형 사이트</h2>
+            <h2 class="t_tit">카드 타입 사이트</h2>
             <p class="t_desc2">
-                사이트에 기초적인 구조를 가진 카드 유형 사이트를 만들어 봅시다.
+                사이트에 기초적인 구조를 가진 카드 타입 사이트를 만들어 봅시다.
             </p>
             <div class="t_iframe">
                 <iframe width="650" height="400" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FoLRt8dyA3nlh2tlGzhrd3y%2F%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0%3Fnode-id%3D5%253A104" allowfullscreen></iframe>
@@ -21,7 +21,8 @@
 
             <h3 class="t_tit2">SITE HTML</h3>
             <p class="t_desc2">
-                사이트를 코딩하는 데에 필요한 HTML의 구조를 잡아줍니다.
+                사이트를 코딩하는 데에 필요한 HTML의 구조를 잡아줍니다.<br>
+                section내에 각 태그에 이름을 부여해주며, <i>articel</i> 영역과 <i>figure</i>태그 내에 img를 사용줍니다.<br>
             </p>
             <div class="t_code">
 <pre><code>    &lt;section id="cardType" class="card__wrap nexon section">
@@ -34,7 +35,9 @@
                 &lt;/figure>
                 &lt;div class="card__body">
                     &lt;h3 class="tit">포터리&lt;/h3>
-                    &lt;p class="desc">포터리는 현대사회에 알맞는 유니폼을 제안하고자 합니다. 과거의 유니폼은 한 집단에 소속된 특징을 보여주는 옷이라면, 현대의 유니폼은 개인의 라이프스타일입니다.&lt;/p>
+                    &lt;p class="desc">
+                        포터리는 현대사회에 알맞는 유니폼을 제안하고자 합니다. 과거의 유니폼은 한 집단에 소속된 특징을 보여주는 옷이라면, 현대의 유니폼은 개인의 라이프스타일입니다.
+                    &lt;/p>
                     &lt;a class="btn" href="/">더 자세히 보기&lt;/a>
                 &lt;/div>
             &lt;/article>
@@ -44,7 +47,9 @@
                 &lt;/figure>
                 &lt;div class="card__body">
                     &lt;h3 class="tit">TPO&lt;/h3>
-                    &lt;p class="desc">우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다. 옷이 그 외의 상황입니다.&lt;/p>
+                    &lt;p class="desc">
+                        우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다. 옷이 그 외의 상황입니다.
+                    &lt;/p>
                     &lt;a class="btn" href="/">더 자세히 보기&lt;/a>
                 &lt;/div>
             &lt;/article>
@@ -54,7 +59,9 @@
                 &lt;/figure>
                 &lt;div class="card__body">
                     &lt;h3 class="tit">원단&lt;/h3>
-                    &lt;p class="desc">유니폼은 계절감, 내구성, 그리고 각각의 형태의 본질을 담아야 합니다. 유니폼에 맞는 원단이 선택되면 수차례 옷을 만들어냅니다. 일정 기간을 두고 옷을 관찰합니다.&lt;/p>
+                    &lt;p class="desc">
+                        유니폼은 계절감, 내구성, 그리고 각각의 형태의 본질을 담아야 합니다. 유니폼에 맞는 원단이 선택되면 수차례 옷을 만들어냅니다. 일정 기간을 두고 옷을 관찰합니다.
+                    &lt;/p>
                     &lt;a class="btn" href="/">더 자세히 보기&lt;/a>
                 &lt;/div>
             &lt;/article>
@@ -65,7 +72,8 @@
 
             <h3 class="t_tit2">SITE CSS</h3>
             <p class="t_desc2">
-                사이트를 코딩하는 데에 필요한 css의 구조를 잡아줍니다.
+                사이트를 코딩하는 데에 필요한 css의 구조를 잡아줍니다.<br>
+                h2와 p는 전체 구역에 사용돼 코드 불안정한 가능성이 있기에, 해당 요소 css만 부여되는 <i>></i>> 를 사용해줍니다.
             </p>
             <div class="t_code">
 <pre><code>    /* fonts */
@@ -144,12 +152,13 @@
 </code></pre>
             </div>
 
-            <div class="t_iframe" style="min-height: 850px; padding-top: 0;">
-                <iframe src="https://kdb6.github.io/ck/javascript/effect/quizeffect01.html" frameborder="0"></iframe>
+            <h3 class="t_tit2">결과물</h3>
+            <div class="t_iframe" style="min-height: 900px; padding-top: 0;">
+                <iframe src="https://kdb6.github.io/ck/site/cardType/cardType01.html" frameborder="0"></iframe>
             </div>
     
             <div class="t_link">
-                <a href="https://github.com/KDB6/ck/blob/main/javascript/effect/quizeffect01.html" target="_blank">원본 사이트 보기</a>
+                <a href="https://kdb6.github.io/ck/site/cardType/cardType01.html" target="_blank">원본 사이트 보기</a>
             </div>
 
         </div>
