--- a/javascript/study/cardType01.html
+++ b/javascript/study/cardType01.html
@@ -19,7 +19,7 @@
                 <iframe width="650" height="400" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FoLRt8dyA3nlh2tlGzhrd3y%2F%25EC%2582%25AC%25EC%259D%25B4%25ED%258A%25B8-%25EB%25A7%258C%25EB%2593%25A4%25EA%25B8%25B0%3Fnode-id%3D5%253A104" allowfullscreen></iframe>
             </div>
 
-            <h3 class="t_tit2">SITE HTML</h3>
+            <h3 class="t_tit2">Site HTML</h3>
             <p class="t_desc2">
                 사이트를 코딩하는 데에 필요한 HTML의 구조를 잡아줍니다.<br>
                 section내에 각 태그에 이름을 부여해주며, <i>articel</i> 영역과 <i>figure</i>태그 내에 img를 사용줍니다.<br>
@@ -70,7 +70,7 @@
 </code></pre>
             </div>
 
-            <h3 class="t_tit2">SITE CSS</h3>
+            <h3 class="t_tit2">Site CSS</h3>
             <p class="t_desc2">
                 사이트를 코딩하는 데에 필요한 css의 구조를 잡아줍니다.<br>
                 h2와 p는 전체 구역에 사용돼 코드 불안정한 가능성이 있기에, 해당 요소 css만 부여되는 <i>></i>> 를 사용해줍니다.
