--- a/javascript/study/cardType01.html
+++ b/javascript/study/cardType01.html
@@ -73,7 +73,7 @@
             <h3 class="t_tit2">Site CSS</h3>
             <p class="t_desc2">
                 사이트를 코딩하는 데에 필요한 css의 구조를 잡아줍니다.<br>
-                h2와 p는 전체 구역에 사용돼 코드 불안정한 가능성이 있기에, 해당 요소 css만 부여되는 <i>></i>> 를 사용해줍니다.
+                h2와 p는 전체 구역에 사용돼 코드 불안정한 가능성이 있기에, 해당 요소 css만 부여되는 <i>></i>를 사용해줍니다.
             </p>
             <div class="t_code">
 <pre><code>    /* fonts */
