--- a/site/cardType/cardType02.html
+++ b/site/cardType/cardType02.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>카드 유형 01</title>
+    <title>카드 유형 02</title>
     <style>
         /* fonts */
         @import url('https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css');    /* 폰트 */
@@ -29,12 +29,20 @@
         h1, h2, h3, h4, h5, h6 {
             font-weight: normal;
         }
-
+        .type2 {
+            padding-top: 10px;
+        }
         /* common */
         .container {
             width: 1160px;
             padding: 0 20px;
             margin: 0 auto;
+        }
+        .container02 {
+            width: 1160px;
+            padding: 0 20px;
+            margin: 0 auto;
+            margin-top: 70px;
         }
         .section {
             padding: 120px 0;
@@ -59,7 +67,7 @@
             justify-content: space-between;
         }
         .card {
-            width: 32%;
+            width: 24%;
             background: #f5f5f5;
         }
         .card__body {
@@ -83,8 +91,11 @@
 </head>
 <body>
     <section id="cardType" class="card__wrap nexon section">
-        <h2>POTTERY</h2>
-        <p>‘POTTERY’, 포터리라는 이름은 도자기를 의미합니다.</p>
+        <h2>Steady Every Wear</h2>
+        <p>
+            지속적인 가치를 지닌 라이프 스타일 제품을 만들기 위해 노력합니다.<br>
+            편안하고 자연스러운 디자인으로 일상 생활에 손이 자주 가는 제품을 지향합니다.
+        </p>
         <div class="card__inner container">
             <article class="card">
                 <figure class="card__header">
@@ -106,6 +117,69 @@
                     <h3 class="tit">TPO</h3>
                     <p class="desc">
                         우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다. 옷이 그 외의 상황입니다.
+                    </p>
+                    <a class="btn" href="/">더 자세히 보기</a>
+                </div>
+            </article>
+            <article class="card">
+                <figure class="card__header">
+                    <img src="img/card_bg03.jpg" alt="원단">
+                </figure>
+                <div class="card__body">
+                    <h3 class="tit">원단</h3>
+                    <p class="desc">
+                        유니폼은 계절감, 내구성, 그리고 각각의 형태의 본질을 담아야 합니다. 유니폼에 맞는 원단이 선택되면 수차례 옷을 만들어냅니다. 일정 기간을 두고 옷을 관찰합니다.
+                    </p>
+                    <a class="btn" href="/">더 자세히 보기</a>
+                </div>
+            </article>
+            <article class="card">
+                <figure class="card__header">
+                    <img src="img/card_bg03.jpg" alt="원단">
+                </figure>
+                <div class="card__body">
+                    <h3 class="tit">원단</h3>
+                    <p class="desc">
+                        유니폼은 계절감, 내구성, 그리고 각각의 형태의 본질을 담아야 합니다. 유니폼에 맞는 원단이 선택되면 수차례 옷을 만들어냅니다. 일정 기간을 두고 옷을 관찰합니다.
+                    </p>
+                    <a class="btn" href="/">더 자세히 보기</a>
+                </div>
+            </article>
+        </div>
+
+        <div class="card__inner container02">
+            <article class="card">
+                <figure class="card__header">
+                    <img src="img/card_bg01.jpg" alt="포터리">
+                </figure>
+                <div class="card__body">
+                    <h3 class="tit">포터리</h3>
+                    <p class="desc">
+                        포터리는 현대사회에 알맞는 유니폼을 제안하고자 합니다. 과거의 유니폼은 한 집단에 소속된 특징을 보여주는 옷이라면, 현대의 유니폼은 개인의 라이프스타일입니다.
+                    </p>
+                    <a class="btn" href="/">더 자세히 보기</a>
+                </div>
+            </article>
+            <article class="card">
+                <figure class="card__header">
+                    <img src="img/card_bg02.jpg" alt="TPO">
+                </figure>
+                <div class="card__body">
+                    <h3 class="tit">TPO</h3>
+                    <p class="desc">
+                        우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다. 옷이 그 외의 상황입니다.
+                    </p>
+                    <a class="btn" href="/">더 자세히 보기</a>
+                </div>
+            </article>
+            <article class="card">
+                <figure class="card__header">
+                    <img src="img/card_bg03.jpg" alt="원단">
+                </figure>
+                <div class="card__body">
+                    <h3 class="tit">원단</h3>
+                    <p class="desc">
+                        유니폼은 계절감, 내구성, 그리고 각각의 형태의 본질을 담아야 합니다. 유니폼에 맞는 원단이 선택되면 수차례 옷을 만들어냅니다. 일정 기간을 두고 옷을 관찰합니다.
                     </p>
                     <a class="btn" href="/">더 자세히 보기</a>
                 </div>
