--- a/site/cardType/cardType02.html
+++ b/site/cardType/cardType02.html
@@ -7,10 +7,10 @@
     <title>카드 유형 02</title>
     <style>
         /* fonts */
-        @import url('https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css');    /* 폰트 */
+        @import url('https://webfontworld.github.io/gmarket/GmarketSans.css');    /* 폰트 */
 
         .nexon {
-            font-family: "NexonLv1Gothic";
+            font-family: 'GmarketSans';
             font-weight: 400;
         }
 
@@ -42,7 +42,7 @@
             width: 1160px;
             padding: 0 20px;
             margin: 0 auto;
-            margin-top: 70px;
+            margin-top: 50px;
         }
         .section {
             padding: 120px 0;
@@ -68,14 +68,15 @@
         }
         .card {
             width: 24%;
-            background: #f5f5f5;
+            background: #fff;
         }
         .card__body {
-            padding: 24px;
+            padding: 0px;
         }
         .card__body .tit {
             font-size: 24px;
             margin-bottom: 10px;
+            margin-top: 20px;
         }
         .card__body .desc {
             font-size: 18px;
@@ -97,103 +98,167 @@
             편안하고 자연스러운 디자인으로 일상 생활에 손이 자주 가는 제품을 지향합니다.
         </p>
         <div class="card__inner container">
+            <!-- 1 -->
             <article class="card">
                 <figure class="card__header">
-                    <img src="img/card_bg01.jpg" alt="포터리">
+                    <img src="img/card2_1.jpg" alt="포터리">
                 </figure>
                 <div class="card__body">
-                    <h3 class="tit">포터리</h3>
+                    <h3 class="tit">
+                        Brand
+                        <span aria-hidden="true">
+                            <svg width="24" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <rect width="24" height="24" rx="5" fill="#8BCEFF"/>
+                                <path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z" fill="white"/>
+                            </svg>
+                        </span>
+                    </h3>
                     <p class="desc">
-                        포터리는 현대사회에 알맞는 유니폼을 제안하고자 합니다. 과거의 유니폼은 한 집단에 소속된 특징을 보여주는 옷이라면, 현대의 유니폼은 개인의 라이프스타일입니다.
+                        디자인뿐만 아니라 미래 세대를 위한 지속 가능성을 고려하며 컬렉션을 제작합니다.
                     </p>
-                    <a class="btn" href="/">더 자세히 보기</a>
                 </div>
             </article>
+            <!-- 2 -->
             <article class="card">
                 <figure class="card__header">
-                    <img src="img/card_bg02.jpg" alt="TPO">
+                    <img src="img/card2_2.jpg" alt="TPO">
                 </figure>
                 <div class="card__body">
-                    <h3 class="tit">TPO</h3>
+                    <h3 class="tit">
+                        Brand
+                        <span aria-hidden="true">
+                            <svg width="24" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <rect width="24" height="24" rx="5" fill="#8BCEFF"/>
+                                <path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z" fill="white"/>
+                            </svg>
+                        </span>
+                    </h3>
                     <p class="desc">
-                        우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다. 옷이 그 외의 상황입니다.
+                        디자인뿐만 아니라 미래 세대를 위한 지속 가능성을 고려하며 컬렉션을 제작합니다.
                     </p>
-                    <a class="btn" href="/">더 자세히 보기</a>
                 </div>
             </article>
+            <!-- 3 -->
             <article class="card">
                 <figure class="card__header">
-                    <img src="img/card_bg03.jpg" alt="원단">
+                    <img src="img/card2_3.jpg" alt="원단">
                 </figure>
                 <div class="card__body">
-                    <h3 class="tit">원단</h3>
+                    <h3 class="tit">
+                        Brand
+                        <span aria-hidden="true">
+                            <svg width="24" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <rect width="24" height="24" rx="5" fill="#8BCEFF"/>
+                                <path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z" fill="white"/>
+                            </svg>
+                        </span>
+                    </h3>
                     <p class="desc">
-                        유니폼은 계절감, 내구성, 그리고 각각의 형태의 본질을 담아야 합니다. 유니폼에 맞는 원단이 선택되면 수차례 옷을 만들어냅니다. 일정 기간을 두고 옷을 관찰합니다.
+                        디자인뿐만 아니라 미래 세대를 위한 지속 가능성을 고려하며 컬렉션을 제작합니다.
                     </p>
-                    <a class="btn" href="/">더 자세히 보기</a>
                 </div>
             </article>
+            <!-- 4 -->
             <article class="card">
                 <figure class="card__header">
-                    <img src="img/card_bg03.jpg" alt="원단">
+                    <img src="img/card2_4.jpg" alt="원단">
                 </figure>
                 <div class="card__body">
-                    <h3 class="tit">원단</h3>
+                    <h3 class="tit">
+                        Brand
+                        <span aria-hidden="true">
+                            <svg width="24" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <rect width="24" height="24" rx="5" fill="#8BCEFF"/>
+                                <path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z" fill="white"/>
+                            </svg>
+                        </span>
+                    </h3>
                     <p class="desc">
-                        유니폼은 계절감, 내구성, 그리고 각각의 형태의 본질을 담아야 합니다. 유니폼에 맞는 원단이 선택되면 수차례 옷을 만들어냅니다. 일정 기간을 두고 옷을 관찰합니다.
+                        디자인뿐만 아니라 미래 세대를 위한 지속 가능성을 고려하며 컬렉션을 제작합니다.
                     </p>
-                    <a class="btn" href="/">더 자세히 보기</a>
                 </div>
             </article>
         </div>
 
         <div class="card__inner container02">
+            <!-- 2-1 -->
             <article class="card">
                 <figure class="card__header">
-                    <img src="img/card_bg01.jpg" alt="포터리">
+                    <img src="img/card2_5.jpg" alt="포터리">
                 </figure>
                 <div class="card__body">
-                    <h3 class="tit">포터리</h3>
+                    <h3 class="tit">
+                        Brand
+                        <span aria-hidden="true">
+                            <svg width="24" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <rect width="24" height="24" rx="5" fill="#8BCEFF"/>
+                                <path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z" fill="white"/>
+                            </svg>
+                        </span>
+                    </h3>
                     <p class="desc">
-                        포터리는 현대사회에 알맞는 유니폼을 제안하고자 합니다. 과거의 유니폼은 한 집단에 소속된 특징을 보여주는 옷이라면, 현대의 유니폼은 개인의 라이프스타일입니다.
+                        디자인뿐만 아니라 미래 세대를 위한 지속 가능성을 고려하며 컬렉션을 제작합니다.
                     </p>
-                    <a class="btn" href="/">더 자세히 보기</a>
                 </div>
             </article>
+            <!-- 2-2 -->
             <article class="card">
                 <figure class="card__header">
-                    <img src="img/card_bg02.jpg" alt="TPO">
+                    <img src="img/card2_6.jpg" alt="TPO">
                 </figure>
                 <div class="card__body">
-                    <h3 class="tit">TPO</h3>
+                    <h3 class="tit">
+                        Brand
+                        <span aria-hidden="true">
+                            <svg width="24" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <rect width="24" height="24" rx="5" fill="#8BCEFF"/>
+                                <path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z" fill="white"/>
+                            </svg>
+                        </span>
+                    </h3>
                     <p class="desc">
-                        우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다. 옷이 그 외의 상황입니다.
+                        디자인뿐만 아니라 미래 세대를 위한 지속 가능성을 고려하며 컬렉션을 제작합니다.
                     </p>
-                    <a class="btn" href="/">더 자세히 보기</a>
                 </div>
             </article>
+            <!-- 2-3 -->
             <article class="card">
                 <figure class="card__header">
-                    <img src="img/card_bg03.jpg" alt="원단">
+                    <img src="img/card2_7.jpg" alt="원단">
                 </figure>
                 <div class="card__body">
-                    <h3 class="tit">원단</h3>
+                    <h3 class="tit">
+                        Brand
+                        <span aria-hidden="true">
+                            <svg width="24" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <rect width="24" height="24" rx="5" fill="#8BCEFF"/>
+                                <path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z" fill="white"/>
+                            </svg>
+                        </span>
+                    </h3>
                     <p class="desc">
-                        유니폼은 계절감, 내구성, 그리고 각각의 형태의 본질을 담아야 합니다. 유니폼에 맞는 원단이 선택되면 수차례 옷을 만들어냅니다. 일정 기간을 두고 옷을 관찰합니다.
+                        디자인뿐만 아니라 미래 세대를 위한 지속 가능성을 고려하며 컬렉션을 제작합니다.
                     </p>
-                    <a class="btn" href="/">더 자세히 보기</a>
                 </div>
             </article>
+            <!-- 2-4 -->
             <article class="card">
                 <figure class="card__header">
-                    <img src="img/card_bg03.jpg" alt="원단">
+                    <img src="img/card2_8.jpg" alt="원단">
                 </figure>
                 <div class="card__body">
-                    <h3 class="tit">원단</h3>
+                    <h3 class="tit">
+                        Brand
+                        <span aria-hidden="true">
+                            <svg width="24" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <rect width="24" height="24" rx="5" fill="#8BCEFF"/>
+                                <path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z" fill="white"/>
+                            </svg>
+                        </span>
+                    </h3>
                     <p class="desc">
-                        유니폼은 계절감, 내구성, 그리고 각각의 형태의 본질을 담아야 합니다. 유니폼에 맞는 원단이 선택되면 수차례 옷을 만들어냅니다. 일정 기간을 두고 옷을 관찰합니다.
+                        디자인뿐만 아니라 미래 세대를 위한 지속 가능성을 고려하며 컬렉션을 제작합니다.
                     </p>
-                    <a class="btn" href="/">더 자세히 보기</a>
                 </div>
             </article>
         </div>
